gcc/testsuite/gdc.test/compilable/extra-files/imp9057_2.d
struct BugInt
{
    uint[] data = [0];
}

