gcc/testsuite/gdc.test/fail_compilation/fail8691.d
struct Foo
{
    Foo[1] f;
}
